themes/asperity/assets/scss/_base.scss
body {
	overflow-wrap: anywhere;
	font-family: sans-serif;
	font-size: $base-font-size;
	letter-spacing: -0.01em;
	line-height: 1.325;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	font-variant-ligatures: contextual;
	-webkit-overflow-scrolling: touch;
	-webkit-text-size-adjust: 100%;

	background: $black;
	color: $white;
	margin: 10px;

	background-image: url("/background.webp");
	background-size: 100%;
	background-repeat: repeat-y;
	image-rendering: pixelated;

	display: flex;
	flex-flow: column;
	height: 100vh;

	& > * {
		image-rendering: initial;
	}
}

// Content bodies
header,
footer,
nav,
main {
	max-width: 800px;
	margin: 0 auto;
}

main {}

// Scrollbar
html,
code[class^="language-"] {
	// Firefox
	scrollbar-width: auto;
	scrollbar-color: $scrollbar-thumb-color $scrollbar-track-color;

	// Chrome, Edge, and Safari
	&::-webkit-scrollbar {
		width: $scrollbar-webkit-track-width;
		height: $scrollbar-webkit-track-width;
	}
	&::-webkit-scrollbar-track {
		background-color: none;
		width: $scrollbar-webkit-track-width;
		&:hover {
			background-color: $scrollbar-track-color;
		}
	}
	&::-webkit-scrollbar-thumb {
		background-color: $scrollbar-thumb-color;
		border-radius: $scrollbar-webkit-thumb-border-radius;
		border: $scrollbar-webkit-thumb-border;
	}
}

// Basic elements
p {
	margin: 2rem 0;
}

hr {
	margin: 1rem 0;
	border: $base-border-thickness $gray-700 solid;
	&.small {
		border-right-color: $pure-black;
		border-left-color: $pure-black;
		border-bottom-color: $pure-black;
	}
}

ol,
ul {
	@include xs {
		padding-left: 1.25rem;
	}
	@include sm {
		padding-left: 1.875rem;
	}
	@include md {
		padding-left: 2.5rem;
	}
	li {
		margin: 0.5rem 0;
	}
}

blockquote {
	@include xs {
		margin-left: 1.25rem;
		margin-right: 1.25rem;
	}
	@include sm {
		margin-left: 1.875rem;
		margin-right: 1.875rem;
	}
	@include md {
		margin-left: 2.5rem;
		margin-right: 2.5rem;
	}
}

dl {
	dt {
	}
	dd {
		@include xs {
			margin-left: 1.25rem;
		}
		@include sm {
			margin-left: 1.875rem;
		}
		@include md {
			margin-left: 2.5rem;
		}
	}
}

img {
//	display: block;
	max-width: 100%;
	border-radius: $base-border-radius;
	display: block;
	margin: 1rem auto;
}

#halftone-plate { // Background 'dot' pattern
	display: block !important; // Only display pattern if stylesheet is loaded
	position: fixed;
	top: 0;
	left: 0;
	z-index: -99;
}

.taglist {
	text-align: center;
	clear: both;
	padding-top: 1rem;
}

#nextprev {
}
#prevart {
	float: left;
	text-align: left;
}
#nextart {
	float: right;
	text-align: right;
}
#nextart,#prevart {
	max-width: 33%;
}

